--- a/test/k6/crd-workflow/smoke.yaml
+++ b/test/k6/crd-workflow/smoke.yaml
@@ -24,11 +24,7 @@ spec:
   - name: Run test
     run:
       image: grafana/k6:0.43.1
-      args:
-      - run
-      - k6-smoke-test.js
-      - -e
-      - K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value
+      shell: k6 run k6-smoke-test.js -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value
       env:
       - name: K6_SYSTEM_ENV
         value: K6_SYSTEM_ENV_value
@@ -148,6 +144,39 @@ spec:
         artifacts:
           paths:
           - '*'
+---
+kind: TestWorkflow
+apiVersion: testworkflows.testkube.io/v1
+metadata:
+  name: k6-workflow-smoke-content-file-artifact
+  labels:
+    core-tests: workflows
+    tool: k6
+spec:
+  content:
+    files:
+      - path: /data/k6-test.js
+        content: |-
+          import http from 'k6/http';
+          import { sleep } from 'k6';
+          export default function () {
+              http.get('https://testkube-test-page-lipsum.pages.dev');
+              sleep(1);
+          };
+  steps:
+    - name: Run Tests
+      workingDir: /data
+      run:
+        image: grafana/k6:0.49.0
+        env:
+          - name: K6_WEB_DASHBOARD
+            value: 'true'
+          - name: K6_WEB_DASHBOARD_EXPORT
+            value: k6-test-report.html
+        shell: k6 run k6-test.js
+      artifacts:
+        paths:
+          - k6-test-report.html
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
