--- a/test/special-cases/edge-cases-expected-fails.yaml
+++ b/test/special-cases/edge-cases-expected-fails.yaml
@@ -429,7 +429,7 @@ spec:
     run:
       image: postman/newman:6-alpine
       env:
-      - name: EXAMPLE_ENV
+      - name: TESTKUBE_POSTMAN_PARAM
         valueFrom:
           secretKeyRef:
             name: non-existant-secret
@@ -437,8 +437,6 @@ spec:
       args:
       - run
       - postman-executor-smoke.postman_collection.json
-      - "--env-var"
-      - "TESTKUBE_POSTMAN_PARAM=TESTKUBE_POSTMAN_PARAM_value"
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
@@ -468,15 +466,15 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-service-exit-code # https://linear.app/kubeshop/issue/TKC-3897/
   labels:
-    core-tests: special-cases
+    core-tests: expected-fail
 spec:
   container:
-    image: alpine:latest
+    image: alpine:3.22.0
   services:
     slave:
       use:
       - name: distribute/evenly
-      image: alpine:latest
+      image: alpine:3.22.0
       logs: always
       count: 2
       shell: 'echo "expected fail - non-zero exit code" && exit 1'
@@ -486,3 +484,43 @@ spec:
   - name: Step
     run:
       shell: 'echo "step"'
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: expected-fail-step-retry
+  labels:
+    core-tests: expected-fail
+description: "step retry (until step failed)"
+spec:
+  container:
+    image: alpine:3.22.0
+  job:
+    activeDeadlineSeconds: 30
+  steps:
+  - name: Random pass/fail
+    retry:
+      count: 20
+      until: self.failed
+    shell: |
+      code=$((RANDOM % 2))
+      [[ $code -eq 0 ]] && echo "random - passed" || echo "random - failed"
+      exit $code
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: expected-fail-negative-step
+  labels:
+    core-tests: expected-fail
+description: "negative step passed - inverting step result to failed"
+spec:
+  container:
+    image: alpine:3.22.0
+  job:
+    activeDeadlineSeconds: 30
+  steps:
+  - name: Step (passed before inverting)
+    negative: true
+    shell: |
+      echo "command" && exit 0
