--- a/test/suites/special-cases/special-cases.yaml
+++ b/test/suites/special-cases/special-cases.yaml
@@ -11,3 +11,8 @@ spec:
       workflows:
       - name: special-cases-global-env
       - name: special-cases-securitycontext-runasuser-runasgroup
+      - name: special-cases-multiple-git-repositories-custommountpath
+      - name: special-cases-optional-step
+      - name: special-cases-step-retry
+      - name: special-cases-negative-step
+      - name: special-cases-custom-shared-volume-steps
