--- a/test/junit/crd-workflow/smoke.yaml
+++ b/test/junit/crd-workflow/smoke.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: junit
+    artifacts: true
 spec:
   content:
     git:
@@ -34,6 +35,7 @@ metadata:
   name: junit5-workflow-smoke-expected-fail
   labels:
     core-tests: expected-fail
+    artifacts: true
 spec:
   content:
     git:
@@ -63,6 +65,7 @@ metadata:
   name: junit5-workflow-smoke-mixed-results
   labels:
     core-tests: expected-fail
+    artifacts: true
 spec:
   content:
     git:
