--- a/test/postman/crd-workflow/smoke.yaml
+++ b/test/postman/crd-workflow/smoke.yaml
@@ -161,6 +161,8 @@ metadata:
   labels:
     core-tests: workflows
     tool: postman
+    artifacts: true
+    junit: true
 spec:
   content:
     git:
