--- a/test/k6/crd-workflow/smoke.yaml
+++ b/test/k6/crd-workflow/smoke.yaml
@@ -23,7 +23,7 @@ spec:
   steps:
   - name: Run test
     run:
-      image: grafana/k6:0.43.1
+      image: grafana/k6:1.1.0
       shell: k6 run k6-smoke-test.js -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value
       env:
       - name: K6_SYSTEM_ENV
@@ -60,7 +60,7 @@ spec:
     template:
       name: official/k6/v1
       config:
-        version: 0.48.0
+        version: 1.1.0
         run: "k6 run k6-smoke-test.js -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value"
 ---
 apiVersion: testworkflows.testkube.io/v1
@@ -94,7 +94,7 @@ spec:
     template:
       name: official/k6/v1
       config:
-        version: 0.48.0
+        version: 1.1.0
         run: "k6 run k6-smoke-test.js -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value"
 ---
 apiVersion: testworkflows.testkube.io/v1
@@ -104,6 +104,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: k6
+    artifacts: true
 spec:
   content:
     git:
@@ -122,7 +123,7 @@ spec:
   steps:
   - name: Run test
     container:
-      image: grafana/k6:0.49.0
+      image: grafana/k6:1.1.0
     steps:
     - shell: mkdir /data/artifacts
     - run:
@@ -152,6 +153,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: k6
+    artifacts: true
 spec:
   content:
     files:
@@ -167,7 +169,7 @@ spec:
     - name: Run Tests
       workingDir: /data
       run:
-        image: grafana/k6:0.49.0
+        image: grafana/k6:1.1.0
         env:
           - name: K6_WEB_DASHBOARD
             value: 'true'
@@ -177,6 +179,37 @@ spec:
       artifacts:
         paths:
           - k6-test-report.html
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: k6-workflow-smoke-master-image
+  labels:
+    core-tests: workflows
+    tool: k6
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/k6/k6-smoke-test.js
+  container:
+    resources:
+      requests:
+        cpu: 128m
+        memory: 128Mi
+    workingDir: /data/repo/test/k6
+  job:
+    activeDeadlineSeconds: 300
+  steps:
+  - name: Run test
+    run:
+      image: grafana/k6:master
+      shell: k6 run k6-smoke-test.js -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value
+      env:
+      - name: K6_SYSTEM_ENV
+        value: K6_SYSTEM_ENV_value
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
@@ -217,7 +250,7 @@ spec:
           value: K6_SYSTEM_ENV_value
       paused: true # synchronize running all workers
       run:
-        image: grafana/k6:0.49.0
+        image: grafana/k6:1.1.0
         shell: |
           k6 run k6-smoke-test.js \
             -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value \
@@ -232,6 +265,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: k6
+    artifacts: true
 spec:
   config:
     vus: {type: integer, default: 2}
@@ -260,7 +294,7 @@ spec:
             memory: 128Mi
       paused: true # synchronise running all workers
       run:
-        image: grafana/k6:0.49.0
+        image: grafana/k6:1.1.0
         workingDir: /data/repo/test/k6
         args:
         - run
