--- a/test/suites/playwright-workflow.yaml
+++ b/test/suites/playwright-workflow.yaml
@@ -11,9 +11,9 @@ spec:
   - execute:
       parallelism: 2
       workflows:
-      - name: playwright-workflow-smoke-v1.32.3
-      - name: playwright-workflow-smoke-v1.32.3-custom-report-dir
-      - name: playwright-workflow-smoke-v1.32.3-command-args
+      - name: playwright-workflow-smoke
+      - name: playwright-workflow-smoke-custom-report-dir
+      - name: playwright-workflow-smoke-command-args
       - name: playwright-workflow-smoke-junit
       - name: playwright-workflow-smoke-artifacts-double-asterisk
       - name: playwright-workflow-smoke-template
