--- a/test/artillery/crd-workflow/smoke.yaml
+++ b/test/artillery/crd-workflow/smoke.yaml
@@ -28,6 +28,33 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
+  name: artillery-workflow-smoke-latest-image
+  labels:
+    core-tests: workflows
+    tool: artillery
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/artillery/artillery-smoke-test.yaml
+  container:
+    resources:
+      requests:
+        cpu: 128m
+        memory: 256Mi
+    workingDir: /data/repo/test/artillery
+    image: artilleryio/artillery:latest
+  job:
+    activeDeadlineSeconds: 300
+  steps:
+  - name: Run test
+    shell: /home/node/artillery/bin/run run artillery-smoke-test.yaml
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
   name: artillery-workflow-smoke-template
   labels:
     core-tests: workflows
