--- a/test/cypress/crd-workflow/smoke.yaml
+++ b/test/cypress/crd-workflow/smoke.yaml
@@ -1,7 +1,7 @@
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: cypress-workflow-smoke-14
+  name: cypress-workflow-smoke
   labels:
     core-tests: workflows
     tool: cypress
@@ -39,7 +39,7 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: cypress-workflow-smoke-14-template
+  name: cypress-workflow-smoke-template
   labels:
     core-tests: workflows
     tool: cypress
@@ -72,7 +72,7 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: cypress-workflow-smoke-14-args
+  name: cypress-workflow-smoke-args
   labels:
     core-tests: workflows
     tool: cypress
@@ -114,7 +114,7 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: cypress-workflow-smoke-14-junit-report
+  name: cypress-workflow-smoke-junit-report
   labels:
     core-tests: workflows
     tool: cypress
@@ -161,7 +161,7 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: cypress-workflow-smoke-14-clean-and-dev-shm-enabled
+  name: cypress-workflow-smoke-clean-and-dev-shm-enabled
   labels:
     core-tests: workflows
     tool: cypress
@@ -307,7 +307,7 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: cypress-workflow-smoke-13-negative
+  name: cypress-workflow-smoke-negative
   labels:
     core-tests: workflows
     tool: cypress
@@ -318,19 +318,19 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/cypress/cypress-13
+      - test/cypress/cypress-14
   container:
     resources:
       requests:
         cpu: 1500m
         memory: 2Gi
-    workingDir: /data/repo/test/cypress/cypress-13
+    workingDir: /data/repo/test/cypress/cypress-14
   job:
     activeDeadlineSeconds: 600
   steps:
   - name: Run tests
     run:
-      image: cypress/included:13.6.4
+      image: cypress/included:14.5.1
       args:
       - --env
       - NON_CYPRESS_ENV=NON_CYPRESS_ENV_value
@@ -346,7 +346,7 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: cypress-workflow-smoke-13-template
+  name: cypress-workflow-smoke-template
   labels:
     core-tests: workflows
     tool: cypress
@@ -356,7 +356,7 @@ spec:
       requests:
         cpu: 1500m
         memory: 2Gi
-    workingDir: /data/repo/test/cypress/cypress-13
+    workingDir: /data/repo/test/cypress/cypress-14
     env:
     - name: CYPRESS_CUSTOM_ENV # currently only possible on this level
       value: "CYPRESS_CUSTOM_ENV_value"
@@ -367,22 +367,22 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/cypress/cypress-13
+      - test/cypress/cypress-14
   job:
     activeDeadlineSeconds: 600
   steps:
   - name: Run from template
-    workingDir: /data/repo/test/cypress/cypress-13
+    workingDir: /data/repo/test/cypress/cypress-14
     template:
       name: official/cypress/v1
       config:
-        version: 13.5.0
+        version: 14.5.1
         run: "npx cypress run --env NON_CYPRESS_ENV=NON_CYPRESS_ENV_value --config '{\"screenshotsFolder\":\"/data/artifacts/screenshots\",\"videosFolder\":\"/data/artifacts/videos\"}'"
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: cypress-workflow-smoke-13-template-checkout-on-step
+  name: cypress-workflow-smoke-template-checkout-on-step
   labels:
     core-tests: workflows
     tool: cypress
@@ -392,7 +392,7 @@ spec:
       requests:
         cpu: 1500m
         memory: 2Gi
-    workingDir: /data/repo/test/cypress/cypress-13
+    workingDir: /data/repo/test/cypress/cypress-14
     env:
     - name: CYPRESS_CUSTOM_ENV # currently only possible on this level
       value: "CYPRESS_CUSTOM_ENV_value"
@@ -407,18 +407,18 @@ spec:
         uri: https://github.com/kubeshop/testkube
         revision: main
         paths:
-        - test/cypress/cypress-13
-    workingDir: /data/repo/test/cypress/cypress-13
+        - test/cypress/cypress-14
+    workingDir: /data/repo/test/cypress/cypress-14
     template:
       name: official/cypress/v1
       config:
-        version: 13.5.0
+        version: 14.5.1
         run: "npx cypress run --env NON_CYPRESS_ENV=NON_CYPRESS_ENV_value --config '{\"screenshotsFolder\":\"/data/artifacts/screenshots\",\"videosFolder\":\"/data/artifacts/videos\"}'"
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: cypress-workflow-smoke-13-template-sub-step
+  name: cypress-workflow-smoke-template-sub-step
   labels:
     core-tests: workflows
     tool: cypress
@@ -428,7 +428,7 @@ spec:
       requests:
         cpu: 1500m
         memory: 2Gi
-    workingDir: /data/repo/test/cypress/cypress-13
+    workingDir: /data/repo/test/cypress/cypress-14
     env:
     - name: CYPRESS_CUSTOM_ENV # currently only possible on this level
       value: "CYPRESS_CUSTOM_ENV_value"
@@ -443,20 +443,20 @@ spec:
         uri: https://github.com/kubeshop/testkube
         revision: main
         paths:
-        - test/cypress/cypress-13
+        - test/cypress/cypress-14
     steps:
     - name: Run from template
-      workingDir: /data/repo/test/cypress/cypress-13
+      workingDir: /data/repo/test/cypress/cypress-14
       template:
         name: official/cypress/v1
         config:
-          version: 13.5.0
+          version: 14.5.1
           run: "npx cypress run --env NON_CYPRESS_ENV=NON_CYPRESS_ENV_value --config '{\"screenshotsFolder\":\"/data/artifacts/screenshots\",\"videosFolder\":\"/data/artifacts/videos\"}'"
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: cypress-workflow-smoke-12.7.0
+  name: cypress-workflow-smoke-12
   labels:
     core-tests: workflows
     tool: cypress
@@ -498,7 +498,7 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: distributed-cypress-workflow-smoke-13
+  name: distributed-cypress-workflow-smoke
   labels:
     core-tests: workflows
     tool: cypress
@@ -509,10 +509,10 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/cypress/cypress-13
+      - test/cypress/cypress-14
   container:
-    image: cypress/included:13.6.4
-    workingDir: /data/repo/test/cypress/cypress-13
+    image: cypress/included:14.5.1
+    workingDir: /data/repo/test/cypress/cypress-14
   job:
     activeDeadlineSeconds: 600
   steps:
@@ -562,10 +562,10 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/cypress/cypress-13
+      - test/cypress/cypress-14
   container:
-    image: cypress/included:13.6.4
-    workingDir: /data/repo/test/cypress/cypress-13
+    image: cypress/included:14.5.1
+    workingDir: /data/repo/test/cypress/cypress-14
     resources:
       requests:
         cpu: 1
