--- a/test/locust/crd-workflow/smoke.yaml
+++ b/test/locust/crd-workflow/smoke.yaml
@@ -31,6 +31,66 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
+  name: locust-workflow-smoke-main-image
+  labels:
+    core-tests: workflows
+    tool: locust
+    artifacts: true
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/locust/locust-project
+  container:
+    workingDir: /data/repo/test/locust/locust-project
+  job:
+    activeDeadlineSeconds: 300
+  steps:
+  - name: Run test
+    run:
+      image: locustio/locust:main
+      shell: |
+        mkdir /data/artifacts
+        locust -f locust_test.py --host https://testkube-test-page-lipsum.pages.dev/ --headless --users 6 --spawn-rate 3 --run-time 10s --html=/data/artifacts/report.html
+    artifacts:
+      paths:
+      - "/data/artifacts/**"
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: locust-workflow-smoke-latest-image
+  labels:
+    core-tests: workflows
+    tool: locust
+    artifacts: true
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/locust/locust-project
+  container:
+    workingDir: /data/repo/test/locust/locust-project
+  job:
+    activeDeadlineSeconds: 300
+  steps:
+  - name: Run test
+    run:
+      image: locustio/locust:latest
+      shell: |
+        mkdir /data/artifacts
+        locust -f locust_test.py --host https://testkube-test-page-lipsum.pages.dev/ --headless --users 6 --spawn-rate 3 --run-time 10s --html=/data/artifacts/report.html
+    artifacts:
+      paths:
+      - "/data/artifacts/**"
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
   name: distributed-locust-workflow-smoke
   labels:
     core-tests: workflows
