--- a/test/suites/cypress-workflow.yaml
+++ b/test/suites/cypress-workflow.yaml
@@ -11,17 +11,17 @@ spec:
   - execute:
       parallelism: 2
       workflows:
-      - name: cypress-workflow-smoke-14
-      - name: cypress-workflow-smoke-14-template
-      - name: cypress-workflow-smoke-14-args
-      - name: cypress-workflow-smoke-14-junit-report
-      - name: cypress-workflow-smoke-14-clean-and-dev-shm-enabled
+      - name: cypress-workflow-smoke
+      - name: cypress-workflow-smoke-template
+      - name: cypress-workflow-smoke-args
+      - name: cypress-workflow-smoke-junit-report
+      - name: cypress-workflow-smoke-clean-and-dev-shm-enabled
       - name: cypress-workflow-smoke-13
       - name: cypress-workflow-smoke-13-video-recording-enabled
-      - name: cypress-workflow-smoke-13-negative
-      - name: cypress-workflow-smoke-13-template
-      - name: cypress-workflow-smoke-13-template-checkout-on-step
-      - name: cypress-workflow-smoke-13-template-sub-step
-      - name: cypress-workflow-smoke-12.7.0
-      - name: distributed-cypress-workflow-smoke-13
+      - name: cypress-workflow-smoke-negative
+      - name: cypress-workflow-smoke-template
+      - name: cypress-workflow-smoke-template-checkout-on-step
+      - name: cypress-workflow-smoke-template-sub-step
+      - name: cypress-workflow-smoke-12
+      - name: distributed-cypress-workflow-smoke
       - name: cypress-workflow-smoke-matrix-junit
