--- a/test/artillery/crd-workflow/smoke.yaml
+++ b/test/artillery/crd-workflow/smoke.yaml
@@ -90,7 +90,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: artillery
-    artifacts: true
+    artifacts: "true"
 spec:
   config:
     arrivalRatePerWorker:
