--- a/test/examples/cloud-demo/test-workflows/playwright.yaml
+++ b/test/examples/cloud-demo/test-workflows/playwright.yaml
@@ -4,7 +4,7 @@ metadata:
   name: playwright
   labels:
     core-tests: workflows
-    artifacts: true
+    artifacts: "true"
 spec:
   content:
     git:
