--- a/test/jmeter/crd-workflow/smoke.yaml
+++ b/test/jmeter/crd-workflow/smoke.yaml
@@ -71,7 +71,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: jmeter
-    artifacts: true
+    artifacts: "true"
 spec:
   content:
     git:
@@ -106,7 +106,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: jmeter
-    artifacts: true
+    artifacts: "true"
 spec:
   content:
     git:
@@ -138,7 +138,7 @@ metadata:
   name: jmeter-workflow-smoke-from-template-v1
   labels:
     core-tests: workflows
-    artifacts: true
+    artifacts: "true"
 spec:
   content:
     git:
@@ -170,7 +170,7 @@ metadata:
   name: jmeter-workflow-smoke-from-template-separate-artifacts-step
   labels:
     core-tests: workflows
-    artifacts: true
+    artifacts: "true"
 spec:
   content:
     git:
@@ -294,7 +294,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: jmeter
-    artifacts: true
+    artifacts: "true"
 spec:
   content:
     git:
