--- a/test/nunit/crd-workflow/crd.yaml
+++ b/test/nunit/crd-workflow/crd.yaml
@@ -5,8 +5,8 @@ metadata:
   labels:
     core-tests: workflows
     tool: nunit
-    artifacts: true
-    junit: true
+    artifacts: "true"
+    junit: "true"
 spec:
   content:
     git:
