feat: [TKC-3927][TKC-3930][TKC-3927][TKC-3931] workflow tests - improvements (projects/images updated to latest versions, pre-release cases, artifacts/junit labels) (#6485)
* workflow tests - project/image versions updated, artifacts and junit labels added

* cypress workflows - updated to latest, versions removed, tools-preview-images suite added - artillery, jmeter, k6, locust, postman

* -artifacts cleanup

* labels fixed

* k6 workflow updated

--- a/test/artillery/crd-workflow/smoke.yaml
+++ b/test/artillery/crd-workflow/smoke.yaml
@@ -18,7 +18,34 @@ spec:
         cpu: 128m
         memory: 256Mi
     workingDir: /data/repo/test/artillery
-    image: artilleryio/artillery:2.0.22
+    image: artilleryio/artillery:2.0.23
+  job:
+    activeDeadlineSeconds: 300
+  steps:
+  - name: Run test
+    shell: /home/node/artillery/bin/run run artillery-smoke-test.yaml
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: artillery-workflow-smoke-latest-image
+  labels:
+    core-tests: workflows
+    tool: artillery
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/artillery/artillery-smoke-test.yaml
+  container:
+    resources:
+      requests:
+        cpu: 128m
+        memory: 256Mi
+    workingDir: /data/repo/test/artillery
+    image: artilleryio/artillery:latest
   job:
     activeDeadlineSeconds: 300
   steps:
@@ -53,16 +80,17 @@ spec:
     template:
       name: official/artillery/v1
       config:
-        version: 2.0.22
+        version: 2.0.23
         run: "artillery run artillery-smoke-test.yaml"
 ---
 kind: TestWorkflow
 apiVersion: testworkflows.testkube.io/v1
 metadata:
-  name: distributed-artillery-workflow-smoke-artifacts
+  name: distributed-artillery-workflow-smoke
   labels:
     core-tests: workflows
     tool: artillery
+    artifacts: "true"
 spec:
   config:
     arrivalRatePerWorker:
