--- a/test/junit-pregenerated-reports/crd-workflow/smoke.yaml
+++ b/test/junit-pregenerated-reports/crd-workflow/smoke.yaml
@@ -4,6 +4,7 @@ metadata:
   name: junit-report-high-level-failure
   labels:
     core-tests: special-cases
+    artifacts: "true"
 spec:
   content:
     git:
@@ -27,6 +28,7 @@ metadata:
   name: junit-report-high-level-without-testcases
   labels:
     core-tests: special-cases
+    artifacts: "true"
 spec:
   content:
     git:
@@ -50,6 +52,7 @@ metadata:
   name: junit-report-high-level-testcase-both-error-and-failure
   labels:
     core-tests: special-cases
+    artifacts: "true"
 spec:
   content:
     git:
