--- a/test/postman/crd-workflow/smoke.yaml
+++ b/test/postman/crd-workflow/smoke.yaml
@@ -161,6 +161,8 @@ metadata:
   labels:
     core-tests: workflows
     tool: postman
+    artifacts: "true"
+    junit: "true"
 spec:
   content:
     git:
@@ -183,3 +185,36 @@ spec:
     artifacts:
       paths:
       - "/data/artifacts/**"
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: postman-workflow-smoke-latest-image
+  labels:
+    core-tests: workflows
+    tool: postman
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/postman/postman-executor-smoke.postman_collection.json
+  container:
+    resources:
+      requests:
+        cpu: 256m
+        memory: 128Mi
+    workingDir: /data/repo/test/postman
+  job:
+    activeDeadlineSeconds:  180
+  steps:
+  - name: Run test
+    run:
+      image: postman/newman:alpine
+      args:
+      - run
+      - postman-executor-smoke.postman_collection.json
+      - "--env-var"
+      - "TESTKUBE_POSTMAN_PARAM=TESTKUBE_POSTMAN_PARAM_value"
+---
