--- a/test/examples/cloud-demo/test-workflows/k6.yaml
+++ b/test/examples/cloud-demo/test-workflows/k6.yaml
@@ -3,7 +3,7 @@ kind: TestWorkflow
 metadata:
   name: k6-loadtest
   labels:
-    core-tests: workflows
+    artifacts: "true"
 spec:
   content:
     git:
