--- a/test/examples/kubecon/test-workflows/playwright.yaml
+++ b/test/examples/kubecon/test-workflows/playwright.yaml
@@ -3,7 +3,7 @@ kind: TestWorkflow
 metadata:
   name: playwright
   labels:
-    core-tests: workflows
+    artifacts: "true"
 spec:
   content:
     git:
