--- a/test/jmeter/crd-workflow/smoke.yaml
+++ b/test/jmeter/crd-workflow/smoke.yaml
@@ -67,10 +67,11 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: jmeter-workflow-smoke-shell-artifacts
+  name: jmeter-workflow-smoke-shell
   labels:
     core-tests: workflows
     tool: jmeter
+    artifacts: "true"
 spec:
   content:
     git:
@@ -105,6 +106,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: jmeter
+    artifacts: "true"
 spec:
   content:
     git:
@@ -136,6 +138,7 @@ metadata:
   name: jmeter-workflow-smoke-from-template-v1
   labels:
     core-tests: workflows
+    artifacts: "true"
 spec:
   content:
     git:
@@ -167,6 +170,7 @@ metadata:
   name: jmeter-workflow-smoke-from-template-separate-artifacts-step
   labels:
     core-tests: workflows
+    artifacts: "true"
 spec:
   content:
     git:
@@ -194,6 +198,39 @@ spec:
       artifacts:
         paths:
         - '/data/artifacts/**/*'
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: jmeter-workflow-smoke-latest-image
+  labels:
+    core-tests: workflows
+    tool: jmeter
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/jmeter/jmeter-executor-smoke.jmx
+  container:
+    resources:
+      requests:
+        cpu: 512m
+        memory: 512Mi
+    workingDir: /data/repo/test/jmeter
+  job:
+    activeDeadlineSeconds: 300
+  steps:
+  - name: Run tests
+    run:
+      image: alpine/jmeter:latest
+      command:
+      - jmeter
+      args:
+      - -n
+      - -t
+      - jmeter-executor-smoke.jmx
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
@@ -253,10 +290,11 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: distributed-jmeter-workflow-smoke-shell-artifacts
+  name: distributed-jmeter-workflow-smoke-shell
   labels:
     core-tests: workflows
     tool: jmeter
+    artifacts: "true"
 spec:
   content:
     git:
