--- a/test/k6/crd-workflow/smoke.yaml
+++ b/test/k6/crd-workflow/smoke.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: k6
+    artifacts: "true"
 spec:
   content:
     git:
@@ -22,12 +23,29 @@ spec:
     activeDeadlineSeconds: 300
   steps:
   - name: Run test
-    run:
-      image: grafana/k6:0.43.1
-      shell: k6 run k6-smoke-test.js -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value
-      env:
-      - name: K6_SYSTEM_ENV
-        value: K6_SYSTEM_ENV_value
+    container:
+      image: grafana/k6:1.1.0
+    steps:
+    - shell: mkdir /data/artifacts
+    - run:
+        args:
+        - run
+        - k6-smoke-test.js
+        - -e
+        - K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value
+        env:
+        - name: K6_SYSTEM_ENV
+          value: K6_SYSTEM_ENV_value
+        - name: K6_WEB_DASHBOARD
+          value: "true"
+        - name: K6_WEB_DASHBOARD_EXPORT
+          value: "/data/artifacts/k6-test-report.html"
+      steps:
+      - name: Saving artifacts
+        workingDir: /data/artifacts
+        artifacts:
+          paths:
+          - '*'
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
@@ -60,7 +78,7 @@ spec:
     template:
       name: official/k6/v1
       config:
-        version: 0.48.0
+        version: 1.1.0
         run: "k6 run k6-smoke-test.js -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value"
 ---
 apiVersion: testworkflows.testkube.io/v1
@@ -94,13 +112,47 @@ spec:
     template:
       name: official/k6/v1
       config:
-        version: 0.48.0
+        version: 1.1.0
         run: "k6 run k6-smoke-test.js -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value"
+---
+kind: TestWorkflow
+apiVersion: testworkflows.testkube.io/v1
+metadata:
+  name: k6-workflow-smoke-content-file
+  labels:
+    core-tests: workflows
+    tool: k6
+    artifacts: "true"
+spec:
+  content:
+    files:
+      - path: /data/k6-test.js
+        content: |-
+          import http from 'k6/http';
+          import { sleep } from 'k6';
+          export default function () {
+              http.get('https://testkube-test-page-lipsum.pages.dev');
+              sleep(1);
+          };
+  steps:
+    - name: Run Tests
+      workingDir: /data
+      run:
+        image: grafana/k6:1.1.0
+        env:
+          - name: K6_WEB_DASHBOARD
+            value: 'true'
+          - name: K6_WEB_DASHBOARD_EXPORT
+            value: k6-test-report.html
+        shell: k6 run k6-test.js
+      artifacts:
+        paths:
+          - k6-test-report.html
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: k6-workflow-smoke-artifacts
+  name: k6-workflow-smoke-latest-image
   labels:
     core-tests: workflows
     tool: k6
@@ -121,62 +173,43 @@ spec:
     activeDeadlineSeconds: 300
   steps:
   - name: Run test
-    container:
-      image: grafana/k6:0.49.0
-    steps:
-    - shell: mkdir /data/artifacts
-    - run:
-        args:
-        - run
-        - k6-smoke-test.js
-        - -e
-        - K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value
-        env:
-        - name: K6_SYSTEM_ENV
-          value: K6_SYSTEM_ENV_value
-        - name: K6_WEB_DASHBOARD
-          value: "true"
-        - name: K6_WEB_DASHBOARD_EXPORT
-          value: "/data/artifacts/k6-test-report.html"
-      steps:
-      - name: Saving artifacts
-        workingDir: /data/artifacts
-        artifacts:
-          paths:
-          - '*'
+    run:
+      image: grafana/k6:latest
+      shell: k6 run k6-smoke-test.js -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value
+      env:
+      - name: K6_SYSTEM_ENV
+        value: K6_SYSTEM_ENV_value
 ---
-kind: TestWorkflow
 apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
 metadata:
-  name: k6-workflow-smoke-content-file-artifact
+  name: k6-workflow-smoke-master-image
   labels:
     core-tests: workflows
     tool: k6
 spec:
   content:
-    files:
-      - path: /data/k6-test.js
-        content: |-
-          import http from 'k6/http';
-          import { sleep } from 'k6';
-          export default function () {
-              http.get('https://testkube-test-page-lipsum.pages.dev');
-              sleep(1);
-          };
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/k6/k6-smoke-test.js
+  container:
+    resources:
+      requests:
+        cpu: 128m
+        memory: 128Mi
+    workingDir: /data/repo/test/k6
+  job:
+    activeDeadlineSeconds: 300
   steps:
-    - name: Run Tests
-      workingDir: /data
-      run:
-        image: grafana/k6:0.49.0
-        env:
-          - name: K6_WEB_DASHBOARD
-            value: 'true'
-          - name: K6_WEB_DASHBOARD_EXPORT
-            value: k6-test-report.html
-        shell: k6 run k6-test.js
-      artifacts:
-        paths:
-          - k6-test-report.html
+  - name: Run test
+    run:
+      image: grafana/k6:master
+      shell: k6 run k6-smoke-test.js -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value
+      env:
+      - name: K6_SYSTEM_ENV
+        value: K6_SYSTEM_ENV_value
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
@@ -217,7 +250,7 @@ spec:
           value: K6_SYSTEM_ENV_value
       paused: true # synchronize running all workers
       run:
-        image: grafana/k6:0.49.0
+        image: grafana/k6:1.1.0
         shell: |
           k6 run k6-smoke-test.js \
             -e K6_ENV_FROM_PARAM=K6_ENV_FROM_PARAM_value \
@@ -232,6 +265,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: k6
+    artifacts: "true"
 spec:
   config:
     vus: {type: integer, default: 2}
@@ -260,7 +294,7 @@ spec:
             memory: 128Mi
       paused: true # synchronise running all workers
       run:
-        image: grafana/k6:0.49.0
+        image: grafana/k6:1.1.0
         workingDir: /data/repo/test/k6
         args:
         - run
